--- a/RhymeApp/nbproject/project.properties
+++ b/RhymeApp/nbproject/project.properties
@@ -29,8 +29,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.9
+javac.target=1.9
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -65,3 +65,4 @@ source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
 libs.CopyLibs.classpath=lib/copylibstask.jar
+module.name=RhymeApp
